# easy_fir_filter

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/easy_fir_filter/: __init__.py  easy_fir_filter.py
src/easy_fir_filter/exceptions/: filter_conf_exceptions.py
src/easy_fir_filter/factory/: filter_factory.py
src/easy_fir_filter/filters/: bandpass_filter.py  bandstop_filter.py  highpass_filter.py  lowpass_filter.py
src/easy_fir_filter/interfaces/: easy_fir_filter_interface.py  filter_interface.py  window_interface.py
src/easy_fir_filter/types/: __init__.py  fir_filter_conf.py
src/easy_fir_filter/utils/: __init__.py  truncate.py
src/easy_fir_filter/validators/: _filter_conf_type_validator.py  _filter_conf_values_validator.py  filter_conf_validator.py
src/easy_fir_filter/windows/: blackman_window.py  hamming_window.py  kaiser_window.py
tests/easy_fir_filter/: calculate_d_parameter_tests.py  calculate_delta_tests.py  calculate_ripples_tests.py
tests/filters/: lowpass_filter_tests.py
tests/fixtures/: filter_configurations.py
tests/validators/: _filter_conf_type_validator_tests.py  _filter_conf_values_validator_test.py  _filter_conf_values_validator_tests.py
