[project]
name = "easy-fir-filter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "scipy>=1.15.1",
    "tabulate>=0.9.0",
]

[project.scripts]
easy-fir-filter = "easy_fir_filter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "black>=25.1.0",
    "pyright>=1.1.393",
    "pytest>=8.3.4",
]
